--- a/DSCI 100 Group Project Individual 33 Samuel Yu.ipynb
+++ b/DSCI 100 Group Project Individual 33 Samuel Yu.ipynb
@@ -11,35 +11,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19763446-c8a3-4429-a46f-96ea1ccd42f9",
+   "id": "b27c5f04-1c54-40f9-aa4d-ab3ec123b06a",
    "metadata": {},
    "source": [
-    "### Loading data:"
+    "## 1. Data Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5214b3b7-37db-4dc0-a5ab-dfc947e5f616",
+   "metadata": {},
+   "source": [
+    "For `players.csv`, there are a total of 196 observations and 7 columns (variables), which include:\n",
+    "- `experience (chr)`: The player's skill level (Beginner, Amateur, Regular, Veteran, Pro)\n",
+    "- `subscribe (lgl)`: Whether the player has an active subscription (TRUE = active, FALSE = inactive)\n",
+    "- `hashedEmail (chr)`: Encrypted email for security and privacy\n",
+    "- `played_hours (dbl)`: The number of hours the player has spent on the game\n",
+    "- `name (chr)`: The name of the player\n",
+    "- `gender (chr)`: The gender of the player\n",
+    "- `Age (dbl)`: The age of the player"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15a61bba-ce40-465a-81c8-d7a04a343967",
+   "metadata": {},
+   "source": [
+    "For `sessions.csv`, there are a total of 1535 observations and 5 columns (variables), which include:\n",
+    "- `hashedEmail (chr)`: Encrypted email for security and privacy\n",
+    "- `start_time (chr)`: The current player session's start time (DD/MM/YYYY HH:MM)\n",
+    "- `end_time (chr)`: The current player session's end time (DD/MM/YYYY HH:MM)\n",
+    "- `original_start_time (dbl)`: The player's original start time\n",
+    "- `original_end_time (dbl)`: The player's original end time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5516bc2f-4bf5-4af3-8006-d54e82737f96",
+   "metadata": {},
+   "source": [
+    "There are some observations that contain NA, these will have to be removed as we wrangle the data. The data was collected by a research team in Computer Science at UBC led by Frank Wood."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14d1e85-5bf7-41c6-a159-3075827dd761",
+   "metadata": {},
+   "source": [
+    "## 2. Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de827f55-2ea8-4f0a-9dd2-c3ad8e0844c5",
+   "metadata": {},
+   "source": [
+    "The broad question I have chosen to address is: \"What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\"  \n",
+    "The formulated, specific question composed is: \"Can the experience level, age, and subscription status of the player help predict the number of hours the player has on the game?\"  \n",
+    "To answer this question, I will check for missing data, explore relationships between predictors and the target, and determine if linear regression or K-NN is more effective for analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d857d858-a0c6-44af-b1d0-6d56b09fcdcb",
+   "metadata": {},
+   "source": [
+    "## 3. Exploratory Data Analysis and Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1a3c1b-3083-413c-a672-e0d690e75075",
+   "metadata": {},
+   "source": [
+    "### Load data (we will not need the data from sessions.csv):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d15c8f49-a25a-4133-8239-d58afdf5d826",
+   "execution_count": 9,
+   "id": "c65373bf-3c0b-48ce-b90b-8ea52be204f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "options(repr.matrix.max.rows = 6)"
@@ -47,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3d498467-3d25-4aee-ab89-fca565e2dea2",
+   "execution_count": 12,
+   "id": "367429a5-da0f-4cc6-b012-c2cd847b206c",
    "metadata": {},
    "outputs": [
     {
@@ -148,97 +201,59 @@
     }
    ],
    "source": [
-    "player_data <- read_csv(\"https://raw.githubusercontent.com/testifyer1041/DSCI-100-Group-Project-Individual-33-Samuel-Yu/refs/heads/main/players.csv\")\n",
-    "player_data"
+    "players_data <- read_csv(\"https://raw.githubusercontent.com/testifyer1041/DSCI-100-Group-Project-Individual-33-Samuel-Yu/refs/heads/main/players.csv\")\n",
+    "players_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa492a86-23be-48e2-9342-d4d5405e2fcb",
+   "metadata": {},
+   "source": [
+    "First, we find the mean values for the variables we will use (subscribe, played_hours, age). For our purposes, the original data is already tidy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "513df87f-6eca-4895-85b3-87e472258c87",
+   "execution_count": 16,
+   "id": "5d1b0005-123a-4f55-8717-842e54134430",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
-      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A spec_tbl_df: 1535 × 5</caption>\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>hashedEmail</th><th scope=col>start_time</th><th scope=col>end_time</th><th scope=col>original_start_time</th><th scope=col>original_end_time</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>subscribe_rate</th><th scope=col>mean_played_hours</th><th scope=col>mean_age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf</td><td>30/06/2024 18:12</td><td>30/06/2024 18:24</td><td>1.71977e+12</td><td>1.71977e+12</td></tr>\n",
-       "\t<tr><td>36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686</td><td>17/06/2024 23:33</td><td>17/06/2024 23:46</td><td>1.71867e+12</td><td>1.71867e+12</td></tr>\n",
-       "\t<tr><td>f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc</td><td>25/07/2024 17:34</td><td>25/07/2024 17:57</td><td>1.72193e+12</td><td>1.72193e+12</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d</td><td>28/07/2024 15:36</td><td>28/07/2024 15:57</td><td>1.72218e+12</td><td>1.72218e+12</td></tr>\n",
-       "\t<tr><td>fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d</td><td>25/07/2024 06:15</td><td>25/07/2024 06:22</td><td>1.72189e+12</td><td>1.72189e+12</td></tr>\n",
-       "\t<tr><td>36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686</td><td>20/05/2024 02:26</td><td>20/05/2024 02:45</td><td>1.71617e+12</td><td>1.71617e+12</td></tr>\n",
+       "\t<tr><td>0.7346939</td><td>5.845918</td><td>21.13918</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A spec\\_tbl\\_df: 1535 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " hashedEmail & start\\_time & end\\_time & original\\_start\\_time & original\\_end\\_time\\\\\n",
-       " <chr> & <chr> & <chr> & <dbl> & <dbl>\\\\\n",
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " subscribe\\_rate & mean\\_played\\_hours & mean\\_age\\\\\n",
+       " <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf & 30/06/2024 18:12 & 30/06/2024 18:24 & 1.71977e+12 & 1.71977e+12\\\\\n",
-       "\t 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 & 17/06/2024 23:33 & 17/06/2024 23:46 & 1.71867e+12 & 1.71867e+12\\\\\n",
-       "\t f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc & 25/07/2024 17:34 & 25/07/2024 17:57 & 1.72193e+12 & 1.72193e+12\\\\\n",
-       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
-       "\t fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d & 28/07/2024 15:36 & 28/07/2024 15:57 & 1.72218e+12 & 1.72218e+12\\\\\n",
-       "\t fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d & 25/07/2024 06:15 & 25/07/2024 06:22 & 1.72189e+12 & 1.72189e+12\\\\\n",
-       "\t 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 & 20/05/2024 02:26 & 20/05/2024 02:45 & 1.71617e+12 & 1.71617e+12\\\\\n",
+       "\t 0.7346939 & 5.845918 & 21.13918\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A spec_tbl_df: 1535 × 5\n",
+       "A tibble: 1 × 3\n",
        "\n",
-       "| hashedEmail &lt;chr&gt; | start_time &lt;chr&gt; | end_time &lt;chr&gt; | original_start_time &lt;dbl&gt; | original_end_time &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf | 30/06/2024 18:12 | 30/06/2024 18:24 | 1.71977e+12 | 1.71977e+12 |\n",
-       "| 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 | 17/06/2024 23:33 | 17/06/2024 23:46 | 1.71867e+12 | 1.71867e+12 |\n",
-       "| f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc | 25/07/2024 17:34 | 25/07/2024 17:57 | 1.72193e+12 | 1.72193e+12 |\n",
-       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
-       "| fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d | 28/07/2024 15:36 | 28/07/2024 15:57 | 1.72218e+12 | 1.72218e+12 |\n",
-       "| fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d | 25/07/2024 06:15 | 25/07/2024 06:22 | 1.72189e+12 | 1.72189e+12 |\n",
-       "| 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686 | 20/05/2024 02:26 | 20/05/2024 02:45 | 1.71617e+12 | 1.71617e+12 |\n",
+       "| subscribe_rate &lt;dbl&gt; | mean_played_hours &lt;dbl&gt; | mean_age &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 0.7346939 | 5.845918 | 21.13918 |\n",
        "\n"
       ],
       "text/plain": [
-       "     hashedEmail                                                     \n",
-       "1    bfce39c89d6549f2bb94d8064d3ce69dc3d7e72b38f431d8aa0c4bf95ccee6bf\n",
-       "2    36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686\n",
-       "3    f8f5477f5a2e53616ae37421b1c660b971192bd8ff77e3398304c7ae42581fdc\n",
-       "⋮    ⋮                                                               \n",
-       "1533 fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d\n",
-       "1534 fd6563a4e0f6f4273580e5fedbd8dda64990447aea5a33cbb5e894a3867ca44d\n",
-       "1535 36d9cbb4c6bc0c1a6911436d2da0d09ec625e43e6552f575d4acc9cf487c4686\n",
-       "     start_time       end_time         original_start_time original_end_time\n",
-       "1    30/06/2024 18:12 30/06/2024 18:24 1.71977e+12         1.71977e+12      \n",
-       "2    17/06/2024 23:33 17/06/2024 23:46 1.71867e+12         1.71867e+12      \n",
-       "3    25/07/2024 17:34 25/07/2024 17:57 1.72193e+12         1.72193e+12      \n",
-       "⋮    ⋮                ⋮                ⋮                   ⋮                \n",
-       "1533 28/07/2024 15:36 28/07/2024 15:57 1.72218e+12         1.72218e+12      \n",
-       "1534 25/07/2024 06:15 25/07/2024 06:22 1.72189e+12         1.72189e+12      \n",
-       "1535 20/05/2024 02:26 20/05/2024 02:45 1.71617e+12         1.71617e+12      "
+       "  subscribe_rate mean_played_hours mean_age\n",
+       "1 0.7346939      5.845918          21.13918"
       ]
      },
      "metadata": {},
@@ -246,53 +261,28 @@
     }
    ],
    "source": [
-    "sessions_data <- read_csv(\"https://raw.githubusercontent.com/testifyer1041/DSCI-100-Group-Project-Individual-33-Samuel-Yu/refs/heads/main/sessions.csv\")\n",
-    "sessions_data"
+    "player_mean <- players_data |>\n",
+    "    summarize(subscribe_rate = mean(subscribe, na.rm = TRUE),\n",
+    "              mean_played_hours = mean(played_hours, na.rm = TRUE),\n",
+    "              mean_age = mean(Age, na.rm = TRUE))\n",
+    "player_mean"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b27c5f04-1c54-40f9-aa4d-ab3ec123b06a",
+   "id": "94851b8e-0b1a-4a3a-b2e6-d64903c17f37",
    "metadata": {},
    "source": [
-    "## 1. Data Description"
+    "From this data, we can see that around 73.47% of players are subscribed, the average number of hours played is 5.85 hours, and the average player age is around 21.12 years old."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5214b3b7-37db-4dc0-a5ab-dfc947e5f616",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "548523c5-61da-40ad-9961-3e0ba68fc283",
    "metadata": {},
-   "source": [
-    "For `players.csv`, there are a total of 196 observations and 7 columns (variables), which include:\n",
-    "- `experience (chr)`: The player's skill level (Beginner, Amateur, Regular, Veteran, Pro)\n",
-    "- `subscribe (lgl)`: Whether the player has an active subscription (TRUE = active, FALSE = inactive)\n",
-    "- `hashedEmail (chr)`: Encrypted email for security and privacy\n",
-    "- `played_hours (dbl)`: The number of hours the player has spent on the game\n",
-    "- `name (chr)`: The name of the player\n",
-    "- `gender (chr)`: The gender of the player\n",
-    "- `Age (dbl)`: The age of the player"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15a61bba-ce40-465a-81c8-d7a04a343967",
-   "metadata": {},
-   "source": [
-    "For `sessions.csv`, there are a total of 1535 observations and 5 columns (variables), which include:\n",
-    "- `hashedEmail (chr)`: Encrypted email for security and privacy\n",
-    "- `start_time (chr)`: The current player session's start time (DD/MM/YYYY HH:MM)\n",
-    "- `end_time (chr)`: The current player session's end time (DD/MM/YYYY HH:MM)\n",
-    "- `original_start_time (dbl)`: The player's original start time\n",
-    "- `original_end_time (dbl)`: The player's original end time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5516bc2f-4bf5-4af3-8006-d54e82737f96",
-   "metadata": {},
-   "source": [
-    "There are some observations that contain NA, these will have to be removed as we wrangle the data. "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
