Completed 4. Methods and Plan portion

--- a/DSCI 100 Group Project Individual 33 Samuel Yu.ipynb
+++ b/DSCI 100 Group Project Individual 33 Samuel Yu.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "5d1b0005-123a-4f55-8717-842e54134430",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1772,7 @@
    "id": "e858a926-ffed-4004-b412-420d5a9ebff7",
    "metadata": {},
    "source": [
-    "We determine that the `subscribe` and `experience` variables are good candidates at predicting the number of hours played, although more data may be needed."
+    "We determine that the `subscribe` and `experience` variables are candidates at predicting the number of hours played, although more data may be needed to come up with more accurate predictions."
    ]
   },
   {
@@ -1784,9 +1784,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e78626e-2df3-4243-bcba-9ce2e6a51397",
+   "metadata": {},
+   "source": [
+    "We choose to use K-NN classfication due to its effectiveness with non-linear decision boundaries. Additionally, it works well with smaller datasets and we will not be extrapolating much, ensuring better accuracy. Choosing the right value for K is crucial in making sure our model is as accurate as possible, so we will test different values of K and apply cross validation for better estimations. Weaknesses to our method includes extrapolation, and failing to choose the right K value which would lead to rapidly increasing innacuracy. We will use a 75% testing set and 25% training set, and no validation set will be used."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a22777-1157-49dd-bd52-342e76b40fdb",
+   "id": "56043a07-9a8f-4319-80e9-515e7e85a065",
    "metadata": {},
    "outputs": [],
    "source": []
